objects/DomainContact_del__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DomainContacts</relationshipLabel>
        <relationshipName>DomainContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DomainContacts</relationshipLabel>
        <relationshipName>DomainContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSupport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <label>fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>home__c</fullName>
        <label>home</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <label>mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other__c</fullName>
        <label>other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DomainContact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Domain__c</columns>
        <columns>IsSupport__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DomainContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DomainContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>